--- a/dom/index1.html
+++ b/dom/index1.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <div>abcd</div>
-        <h1>learning DOM</h1>
-        <h4>starting code</h4>
-        <p>lets learn about dom</p>
+        <h1 id="heading1">learning DOM</h1>
+        <h4 class="heading">starting code</h4>
+        <p class="heading">lets learn about dom</p>
+        <button class="heading">click me</button>
         <script src="script.js"></script>
 </body>
 </html>
